# cmw-rag

./: ..env.swp  .coverage  .env-example  .env.example  .gitattributes  .gitignore  AGENTS.md  ASYNC_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  mkdocs_for_rag_indexing.yml  package-lock.json  package.json  pyproject.toml
.cursor/: cursor_python_process_continuation.md
.cursor/plans/: 20260405-phoenix-observability-report-pack.plan.md  appendix-e-markdown-structure-fix-20260404.plan.md  async_chroma_retriever_f90a0838.plan.md  chat-7ca608fd.plan.md  chunk_size_model_cap_rewire_1e8b497d.plan.md  clarify-infrastructure-alienation-report-pack.plan.md  cmo_genai_research_sync_1b15a97b.plan.md  (+28 more)
.opencode/: README.md  package-lock.json  plans_reranker_benchmark_20260321.md
.playwright-cli/: page-2026-03-24T04-56-35-410Z.yml  page-2026-03-24T05-06-54-235Z.yml  page-2026-03-24T05-09-06-306Z.yml  page-2026-03-24T05-10-25-860Z.yml  page-2026-03-24T05-10-31-871Z.yml  page-2026-03-24T05-11-00-487Z.yml
docs/: CHANGES_SUMMARY_20251208.md  GRADIO_SPINNERS_IMPLEMENTATION.md  MCP_CONFIGURATION.md  RAG_architecture_improvements_test_task.md  TESTING.md
rag_engine/: .env.example  __init__.py  rag_indexing_hook.py  requirements.txt  requirements_frozen.txt
scripts/: fix_report_pack_refs.py
systemd/: cmw-rag-app.service  cmw-rag-chroma.service  cmw-rag-corpus-sync.service  cmw-rag-corpus-sync.timer  cmw-rag-mosec.service  cmw-rag-vllm.service
ui/: cmw-kb-copilot.html  cmw-widget-theme.css  embed-snippet.html  gradio-embedded.html  index.html  kb_proxy.py  run_widget.py
(+767 files in other folders)
