[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-engine"
version = "0.1.0"
description = "RAG Engine for MkDocs documentation"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.isort]
known-first-party = ["rag_engine"]

[tool.pytest.ini_options]
testpaths = ["rag_engine/tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "external: tests that hit real services or large model downloads",
]
addopts = [
    "-v",                 # show per-test progress [ xx% ]
    "--tb=short",         # concise tracebacks
    "--cov=rag_engine",   # coverage target
    "--cov-report=term-missing",
    "--cov-fail-under=95",# enforce >=95% coverage
]


